diferença entre node e js no navegador

--- a/aula5/index.html
+++ b/aula5/index.html
@@ -13,9 +13,6 @@
 </head>
 <body>
 
-    <script>
-        console.log("Uma prática melhor é colocar a tag SCRIPT dentro de body!");
-        console.log("Este trecho será exibido no console do navegador.");
-    </script>
+    <script src='js/index.js'></script>
 </body>
 </html>
